// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewProviderLogoContainer component:  should render correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root component__ReviewProviderLogoContainer-sc-1cotioo-2 yoQKM"
  />
</DocumentFragment>
`;

exports[`ReviewSummaryContainer component:  should render correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root component__ReviewSummaryContainer-sc-1cotioo-3 gkGBMH"
  />
</DocumentFragment>
`;

exports[`ReviewTitleContainer component:  should render correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root component__ReviewTitleContainer-sc-1cotioo-1 gCqIBd"
  />
</DocumentFragment>
`;
